@@ -1,0 +1,42 @@
+<?xml version="1.0" encoding="UTF-8"?>
+<!DOCTYPE web-app PUBLIC "-//Sun Microsystems, Inc.//DTD Web Application 2.3//EN" "http://java.sun.com/dtd/web-app_2_3.dtd">
+<!--
+ Copyright (C) 2009 Amit Nithianandan
+
+ Licensed to the Apache Software Foundation (ASF) under one or more
+ contributor license agreements.  See the NOTICE file distributed with
+ this work for additional information regarding copyright ownership.
+ The ASF licenses this file to You under the Apache License, Version 2.0
+ (the "License"); you may not use this file except in compliance with
+ the License.  You may obtain a copy of the License at
+
+     http://www.apache.org/licenses/LICENSE-2.0
+
+ Unless required by applicable law or agreed to in writing, software
+ distributed under the License is distributed on an "AS IS" BASIS,
+ WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
+ See the License for the specific language governing permissions and
+ limitations under the License.
+-->
+
+<web-app xmlns="http://java.sun.com/xml/ns/j2ee"
+    xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
+    xsi:schemaLocation="http://java.sun.com/xml/ns/j2ee http://java.sun.com/xml/ns/j2ee/web-app_2_4.xsd"
+    version="2.4">
+
+
+  <servlet>
+    <servlet-name>CoberturaFlushServlet</servlet-name>
+    <display-name>CoberturaFlushServlet</display-name>
+    <description>CoberturaFlushServlet</description>
+    <servlet-class>net.sourceforge.cobertura.webapp.FlushCoberturaServlet</servlet-class>
+    <load-on-startup>1</load-on-startup>
+  </servlet>
+
+  
+  <servlet-mapping>
+    <servlet-name>CoberturaFlushServlet</servlet-name>
+    <url-pattern>/flushCobertura</url-pattern>
+  </servlet-mapping>
+ 
+</web-app>
